Fix Contact page x-overflow on mobile

--- a/assets/sass/sections/_contact.scss
+++ b/assets/sass/sections/_contact.scss
@@ -25,10 +25,6 @@
             font-weight: 400;
         }
 
-        .wpforms-field .wpforms-error {
-            font-weight: 700;
-        }
-
         .contact-submit {
             font-weight: 700;
             font-size: 18px;
@@ -49,7 +45,6 @@
         }
 
         .contact-form-col {
-            max-width: 100vw;
             padding: 15px 12px;
         }
     }
